--- a/pom.xml
+++ b/pom.xml
@@ -83,11 +83,18 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
+                <artifactId>maven-jar-plugin</artifactId>
                 <version>2.4</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <classpathPrefix>lib/</classpathPrefix>
+                            <mainClass>com.architecture.ahfi.AhfiApplication</mainClass>
+                        </manifest>
+                    </archive>
+<!--                    <source>1.8</source>-->
+<!--                    <target>1.8</target>-->
                 </configuration>
             </plugin>
         </plugins>
