--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
-#spring.datasource.url = jdbc:mysql://b5ff2e2328bf97:99b8ff16@eu-cdbr-west-03.cleardb.net/heroku_1b9d097f814ad6f?reconnect=true
-#spring.datasource.username=b5ff2e2328bf97
-#spring.datasource.password=99b8ff16
-#spring.datasource.hikari.maximum-pool-size=8
-#spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url = jdbc:mysql://localhost:3306/work_search?reconnect=true
-spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.url = jdbc:mysql://b5ff2e2328bf97:99b8ff16@eu-cdbr-west-03.cleardb.net/heroku_1b9d097f814ad6f?reconnect=true
+spring.datasource.username=b5ff2e2328bf97
+spring.datasource.password=99b8ff16
+spring.datasource.hikari.maximum-pool-size=8
 spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url = jdbc:mysql://localhost:3306/work_search?reconnect=true
+#spring.datasource.username=root
+#spring.datasource.password=1234
+#spring.jpa.hibernate.ddl-auto=create-drop
 
 server.address= 0.0.0.0
 
